// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Score should assume 0 as default value to current and best 1`] = `
<div
  className="Score"
>
  <span
    className="current_score"
    title="The current score"
  >
    0
  </span>
  <span
    className="best_score"
    title="The best score"
  >
    0
  </span>
</div>
`;

exports[`Score should render without crashing 1`] = `
<div
  className="Score"
>
  <span
    className="current_score"
    title="The current score"
  >
    1000
  </span>
  <span
    className="best_score"
    title="The best score"
  >
    1234
  </span>
</div>
`;
